--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <nav>
-            <h3 class="nav title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li>Home</li>
                 <li>About</li>
@@ -45,6 +46,16 @@
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+        </section>
+
+        <!-- features section -->
+        <section class="features">
+
+        </section>
+        <!-- facts section -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         </section>
     </main>
 
