finished the architects file

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <h5 class="border">All rights reserved copyright@2023 startup landing page design</h5>
+    </footer>
 </body>
 
 </html>
